--- a/app/globals.css
+++ b/app/globals.css
@@ -18,3 +18,23 @@
 .swiper-pagination-bullet-active {
   background: #4F46E5 !important;
 }
+
+.shadow-custom {
+  box-shadow: 0px 0px 50px 10px #00E3F61A;
+  /* Your box shadow */
+}
+@media screen and (max-width: 1217px) {
+  .wrp {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+}
+@media screen and (max-width: 785px) {
+  .monthly {
+    flex-wrap: wrap;
+    justify-content: left;
+    align-items: left;
+    gap: 20px;
+    text-align: left;
+  }
+}
